[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Fonts/fontEscapeMenu.tres" type="DynamicFont" id=2]
[ext_resource path="res://Map/Map.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/EscapeMenu.gd" type="Script" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Map" parent="." instance=ExtResource( 3 )]

[node name="EscapeMenu" type="CanvasLayer" parent="."]
layer = -10
script = ExtResource( 4 )

[node name="Panel" type="PanelContainer" parent="EscapeMenu"]
margin_left = 730.0
margin_top = 340.0
margin_right = 1185.0
margin_bottom = 740.0

[node name="VBoxContainer" type="VBoxContainer" parent="EscapeMenu/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 448.0
margin_bottom = 393.0

[node name="Save" type="Button" parent="EscapeMenu/Panel/VBoxContainer"]
margin_right = 441.0
margin_bottom = 126.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Save"

[node name="Settings" type="Button" parent="EscapeMenu/Panel/VBoxContainer"]
visible = false
margin_top = 97.0
margin_right = 441.0
margin_bottom = 191.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Settings"

[node name="QuitMenu" type="Button" parent="EscapeMenu/Panel/VBoxContainer"]
margin_top = 130.0
margin_right = 441.0
margin_bottom = 256.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Save & Quit to Menu"

[node name="QuitSave" type="Button" parent="EscapeMenu/Panel/VBoxContainer"]
margin_top = 260.0
margin_right = 441.0
margin_bottom = 386.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Save & Quit"

[connection signal="button_up" from="EscapeMenu/Panel/VBoxContainer/Save" to="." method="_on_Save_button_up"]
[connection signal="button_up" from="EscapeMenu/Panel/VBoxContainer/Settings" to="." method="_on_Settings_button_up"]
[connection signal="button_up" from="EscapeMenu/Panel/VBoxContainer/QuitMenu" to="." method="_on_QuitMenu_button_up"]
[connection signal="button_up" from="EscapeMenu/Panel/VBoxContainer/QuitSave" to="." method="_on_QuitSave_button_up"]
